# OrderAnalyse

./: .gitignore  CMakeLists.txt  README.md  input.txt  main.cpp  test.csv  widget.cpp  widget.h  widget.ui
.github/workflows/: cmake-single-platform.yml
include/: calculator.h  csv_dealer.h  csv_reader.h  distinct_counter.h  matching_counter.h  order.h  order_list.h  process_data.h  result_data.h  sheet.h
include/gui/: chart_widget.h  filter_widget.h  main_widget.h  matching_counter_widget.h  widget.h
include/order_analyse/: batch.h  batch_staging.h  batcher.h  calculator.h  csv_dealer.h  matching_counter.h  sheet.h
src/: chart_widget.cpp  chart_widget.ui  filter_widget.cpp  filter_widget.ui  main.cpp  main_cli.cpp  main_gui.cpp  main_widget.cpp  main_widget.ui  matching_counter_widget.cpp  matching_counter_widget.ui  test.cpp  widget.cpp  widget.ui
test/: test.csv  test1.csv
